--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,7 @@
-
+body{
+  text-align: center;
+  text-color:black;
+}
 #myhead{
   color: blue;
   text-align: center;
@@ -11,10 +14,10 @@ font-style: italic;
 font-weight: bolder;
 }
 body {
-background-color:black;
+background-color:white;
 }
 .one{
-color: red;
+color: black;
 font-weight: bold;
 font-family: sans-serif;
 }
@@ -30,3 +33,6 @@ img {
         float: left;
 
       }
+.rowone{
+  padding-bottom: 5%;
+}
